// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component renders correctly 1`] = `
<div
  class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
>
  <span
    class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
    name="language"
  >
    <option
      disabled=""
      selected=""
      value=""
    />
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;

exports[`Select component renders with empty item text 1`] = `
<div
  class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
>
  <span
    class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
    name="language"
  >
    <option
      disabled=""
      selected=""
      value=""
    >
      Select a language
    </option>
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;

exports[`Select component renders with hidden empty item 1`] = `
<div
  class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
>
  <span
    class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
    name="language"
  >
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;

exports[`Select component renders with hidden placeholder 1`] = `
<div
  class="relative block focus-within:rounded focus-within:ring-[3px] focus-within:ring-yellow-400 focus-within:ring-offset-4 focus-within:ring-offset-blue-700"
>
  <span
    class="absolute inset-y-0 right-0 flex items-center w-10 pl-1 pr-1 text-white bg-magenta-500 rounded-r pointer-events-none print:hidden shadow-bottom-gray focus:shadow-none"
  >
    <svgr-mock
      classname="h-full"
    />
  </span>
  <select
    class="border-gray-400 border-y border-l print:p-1 text-gray-500 appearance-none w-full block text-md h-10 pl-3 pr-12 bg-white rounded tool-dd outline-none focus:outline-none focus:border-white"
    name="language"
  >
    <option
      disabled=""
      hidden=""
      selected=""
      value=""
    />
    <option
      value="en"
    >
      English
    </option>
    <option
      value="es"
    >
      Spanish
    </option>
  </select>
</div>
`;
